--- a/index.html
+++ b/index.html
@@ -66,7 +66,23 @@
       <h1>Contacto</h1>
       <p>Puedes comunicarte con nosotros a través de nuestro formulario o redes sociales.</p>
     </div>
-<form div="contacto"action="https://formsubmit.co/juandavidibarracollazos@gmail.com" method="POST" class="formulario-contacto">
+<div class="form-container">
+    <h2>Contáctanos</h2>
+    <form action="https://formspree.io/f/xqaqydvq" method="POST">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
+
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="mensaje">Mensaje:</label>
+      <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+
+    <p id="formMsg"></p>
+<!-- <form div="contacto"action="https://formsubmit.co/juandavidibarracollazos@gmail.com" method="POST" class="formulario-contacto">
   <label>Nombre:</label>
   <input type="text" name="name" required>
 
@@ -77,7 +93,7 @@
   <textarea name="message" required></textarea>
 
   <button type="submit">Enviar</button>
-</form>
+</form> -->
       <div class="redes-sociales">
   <h3>Síguenos en nuestras redes:</h3>
 <div style="height: 40px;"></div>  
